--- a/src/pages/Scholarships/index.astro
+++ b/src/pages/Scholarships/index.astro
@@ -34,7 +34,7 @@ const subTitle: string =
   "bal bla bla";
 
 
-const pageTitle: string = `Blog | ${SITE.title}`;
+const pageTitle: string = `${title} | ${SITE.title}`;
 ---
 
 <MainLayout
