--- a/src/components/sections/navbar&footer/FooterSection.astro
+++ b/src/components/sections/navbar&footer/FooterSection.astro
@@ -13,8 +13,8 @@ const strings = Astro.currentLocale === "fr" ? frStrings : enStrings;
 
 // Define the variables that will be used in this component
 const sectionThreeTitle: string = Astro.currentLocale === "fr" ? "Rester à jour" : "Stay up to date";
-const sectionThreeContent: string = Astro.currentLocale === "fr" ? "Restez informé des derniers outils et des offres exclusives." :
-  "Stay updated with the latest tools and exclusive deals.";
+const sectionThreeContent: string = Astro.currentLocale === "fr" ? "Restez informé des derniers outils et des offres." :
+  "Stay updated with the latest News.";
 const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Crafted by";
 ---
 
@@ -49,7 +49,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Crafte
     >
       <div class="flex items-center justify-between">
         <p class="text-sm text-neutral-600 dark:text-neutral-400">
-          © <span id="current-year"></span> Howta, Inc. All rights reserved.
+          © <span id="current-year"></span> Nobda, Inc. All rights reserved.
        
         </p>
       </div>
