--- a/src/pages/PhD Opportunities/index.astro
+++ b/src/pages/PhD Opportunities/index.astro
@@ -31,7 +31,7 @@ const otherPosts: CollectionEntry<"blog">[] = blogPosts.slice(1);
 // Define variables for page content
 const title: string = "Phd Opportunities";
 const subTitle: string =
-  "bal bla bla";
+  "Explore our opportunities for a better future";
 
 
 const pageTitle: string = `${title} | ${SITE.title}`;
