--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -30,12 +30,11 @@ const mostRecentPost: CollectionEntry<"blog"> = blogPosts[0];
 const otherPosts: CollectionEntry<"blog">[] = blogPosts.slice(1);
 
 // Define variables for page content
-const title: string = "Your Gateway to Construction Excellence";
-const subTitle: string =
-  "Explore the latest news, tips, and insights from ScrewFast to enhance your construction projects. From product spotlights to project management strategies, our blog is your go-to resource for all things hardware and construction.";
-const secondTitle: string = "Insights";
+const title: string = "Blog";
+const subTitle: string = "Explore our blog posts";
+const secondTitle: string = "Opportunities";
 const secondSubTitle: string =
-  "Stay up-to-date with the latest trends and developments in the construction industry with insights from ScrewFast's team of industry experts. ";
+  "Explore our opportunities for a better future";
 
 const pageTitle: string = `Blog | ${SITE.title}`;
 ---
@@ -91,7 +90,6 @@ const pageTitle: string = `Blog | ${SITE.title}`;
   <section
     class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 2xl:max-w-full"
   >
-    <CardBlogRecent blogEntry={mostRecentPost} />
   </section>
   <!--Insights section-->
   <section
