--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,8 +16,8 @@ const pageTitle: string = `Contact | ${SITE.title}`;
     "@id": "https://screwfast.uk/contact",
     "url": "https://screwfast.uk/contact",
     "name": "Contact Us | ScrewFast",
-    "description":
-      "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
+    "description": 
+      "Have questions or want to discuss something? Reach out, and let's craft the perfect solution with our services.",
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://screwfast.uk",
