--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -84,6 +84,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
       </h2>
       <!--Blog post contents-->
       <div class="mb-5 space-y-5 md:mb-8 md:space-y-8">
+        <iframe style="width: 100%; max-width: 550px; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/tRh6IR3LxjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe></span>
         {
           post.data.contents.map((content: string, index: any) =>
             index === 1 ? (
@@ -96,6 +97,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
                   src={post.data.cardImage}
                   alt={post.data.cardImageAlt}
                   draggable={"false"}
+                  loading={"eager"}
                   format={"avif"}
                 />
               </>
@@ -114,6 +116,7 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
         <div
           class="flex flex-wrap gap-x-2 gap-y-1 sm:flex-nowrap sm:items-center sm:gap-y-0"
         >
+      
           {
             post.data.tags?.map((tag: string) => (
               <span class="inline-flex items-center gap-x-1.5 rounded-lg bg-neutral-400/30 px-3 py-1.5 text-xs font-medium text-neutral-700 outline-none focus:outline-none focus-visible:outline-none focus-visible:ring dark:bg-neutral-700/60 dark:text-neutral-300">
@@ -135,11 +138,6 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
         </div>
       </div>
     </div>
-    <PostFeedback
-      title="Was this post helpful?"
-      firstChoice="Yes"
-      secondChoice="No"
-    />
   </section>
 
   <!--Related articles section-->
