--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const avatarSrcs: Array<string> = [
 
   <HeroSection
     title=`Enhance Your Career with <span
-        class="text-yellow-500 dark:text-yellow-400">Forsa</span>`
+        class="text-yellow-500 dark:text-yellow-400">Nobda</span>`
     subTitle=" Your trusted platform for scholarships, internships, PhD programs, and job opportunities. Advance Your Career, Secure Opportunities, Achieve Global Success!"
     primaryBtn="Explore Opportunities"
     primaryBtnURL="/blog"
@@ -40,7 +40,7 @@ const avatarSrcs: Array<string> = [
   />
 
   <FeaturesNavs
-    title=`Navigating opportunities has never been easier. Discover how <span class="text-yellow-500 dark:text-yellow-400">Forsa</span> simplifies the process from search to success.`
+    title=`Navigating opportunities has never been easier. Discover how <span class="text-yellow-500 dark:text-yellow-400">Nobda</span> simplifies the process from search to success.`
     tabs={[
       {
         heading: "Discover Opportunities",
@@ -52,9 +52,9 @@ const avatarSrcs: Array<string> = [
         first: true,
       },
       {
-        heading: "What do we offer at forsa ?",
+        heading: "What do we offer at nobda ?",
         content:
-          "Forsa offers a wide range of services, including access to educational opportunities such as scholarships, fellowships, cultural exchanges, funded PhD programs, and conferences. It also provides job and internship listings. Through For9a, you can apply to selected opportunities with the support of our team. Additionally, we offer personalized counseling sessions and a personality test to help users discover suitable academic and career paths.",
+          "Nobda offers a wide range of services, including access to educational opportunities such as scholarships, fellowships, cultural exchanges, funded PhD programs, and conferences. It also provides job and internship listings. Through For9a, you can apply to selected opportunities with the support of our team. Additionally, we offer personalized counseling sessions and a personality test to help users discover suitable academic and career paths.",
         svg: "dashboard",
         src: dashboard,
         alt: "A screenshot or graphic representation of the intuitive dashboard",
