--- a/src/components/ui/buttons/AuthBtn.astro
+++ b/src/components/ui/buttons/AuthBtn.astro
@@ -1,10 +1,11 @@
 ---
 // Destructure the properties from Astro.props
-const { title } = Astro.props;
+const { title,link } = Astro.props;
 
 // Define TypeScript interface for the properties
 interface Props {
   title: string;
+  link  : string;
 }
 // Define CSS classes for styling the button
 const baseClasses =
@@ -18,8 +19,11 @@ const ringClasses = "ring-zinc-500 dark:ring-zinc-200";
 ---
 
 <!-- Styled submit button with dynamic title -->
-<button
-  type="submit"
+
+<a
+  href={link}
   class={`${baseClasses} ${borderClasses} ${bgColorClasses} ${hoverClasses} ${fontSizeClasses} ${disabledClasses} ${ringClasses}`}
-  >{title}</button
 >
+  {title}
+</a>
+
