--- a/src/components/sections/misc/ContactSection.astro
+++ b/src/components/sections/misc/ContactSection.astro
@@ -82,18 +82,19 @@ const ringClasses = "ring-zinc-500 dark:ring-zinc-200";
             <div>
               <label for={"hs-about-contacts"} class="sr-only">{"Details"}</label>
               <input
-              id={"hs-about-contacts"}
-              name={"hs-about-contacts"}
-              class="block w-full rounded-lg border border-neutral-200 bg-neutral-50 px-4 py-3 text-sm text-neutral-700 placeholder:text-neutral-500 focus:border-neutral-200 focus:outline-none focus:ring focus:ring-neutral-400 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-600 dark:bg-neutral-700/30 dark:text-neutral-300 dark:placeholder:text-neutral-400 dark:focus:ring-1"
-              placeholder={"Details"}
-              x-model="details"
-              />
+                  type="text"
+                  name={"hs-about-contacts"}
+                  id={"hs-about-contacts"}
+                  class="block w-full rounded-lg border border-neutral-200 bg-neutral-50 px-4 py-3 text-sm text-neutral-700 placeholder:text-neutral-500 focus:border-neutral-200 focus:outline-none focus:ring focus:ring-neutral-400 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-600 dark:bg-neutral-700/30 dark:text-neutral-300 dark:placeholder:text-neutral-400 dark:focus:ring-1"
+                  placeholder={"Details"}
+                  x-model="body"
+                />
             </div>
           </div>
 
           <div class="mt-4 grid">
             <a
-            :href="`mailto:robotxmore@gmail.com?subject=Hello%20from%20${firstName}%20${lastName}&body=${details}`"
+            :href="`mailto:robotxmore@gmail.com?subject=Hello%20from%20${firstName}%20${lastName}&body=${body}`"
             class={`${baseClasses} ${borderClasses} ${bgColorClasses} ${hoverClasses} ${fontSizeClasses} ${disabledClasses} ${ringClasses}`}
             >
             {title}
