--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -23,50 +23,50 @@ const avatarSrcs: Array<string> = [
   <!-- Add banner Here -->
   <AnnouncementBanner
     btnId="dismiss-button"
-    btnTitle="Explore ScrewFast on GitHub"
+    btnTitle=""
     url="https://github.com/mearashadowfax/ScrewFast"
   />
 
   <HeroSection
-    title=`Enhance Your Career with <span
+    title=`Améliorez votre carrière avec <span
         class="text-yellow-500 dark:text-yellow-400">Nobda</span>`
     subTitle=" Your trusted platform for scholarships, internships, PhD programs, and job opportunities. Advance Your Career, Secure Opportunities, Achieve Global Success!"
-    primaryBtn="Explore Opportunities"
+    primaryBtn="Explorer les Opportunités"
     primaryBtnURL="/blog"
-    secondaryBtn="Start Your Journey"
+    secondaryBtn="Commencer Votre Aventure"
     secondaryBtnURL="/services"
     src={heroImage}
-    alt="Stack of ScrewFast product boxes containing assorted hardware tools"
+    alt="hero image"
   />
 
   <FeaturesNavs
-    title=`Navigating opportunities has never been easier. Discover how <span class="text-yellow-500 dark:text-yellow-400">Nobda</span> simplifies the process from search to success.`
+    title=`Trouver des opportunités n'a jamais été simple. Découvrez comment Nobda simplifie le processus de recherche jusqu'à la réussite.`
     tabs={[
       {
-        heading: "Discover Opportunities",
+        heading: "découvrir les opportunités",
         content:
           "From scholarships to internships, PhD programs, and job openings, our platform offers a wide range of opportunities that cater to various fields and career stages. Find what suits you best and take the next step in your professional journey.",
         svg: "tools",
         src: tools,
-        alt: "Yellow and black heavy equipment on brown grass field",
+        alt: "",
         first: true,
       },
       {
-        heading: "What do we offer at nobda ?",
+        heading: "Qu’offrons-nous chez nobda ?",
         content:
-          "Nobda offers a wide range of services, including access to educational opportunities such as scholarships, fellowships, cultural exchanges, funded PhD programs, and conferences. It also provides job and internship listings. Through For9a, you can apply to selected opportunities with the support of our team. Additionally, we offer personalized counseling sessions and a personality test to help users discover suitable academic and career paths.",
+          "Nobda offre une vaste gamme de services, y compris l’accès à des possibilités d’éducation telles que des bourses, des bourses, des échanges culturels, des programmes de doctorat financés et des conférences. Il fournit également des listes d’emplois et de stages. Grâce à For9a, vous pouvez postuler à des opportunités sélectionnées avec le soutien de notre équipe. De plus, nous offrons des séances de counseling personnalisé et un test de personnalité pour aider les utilisateurs à découvrir des parcours académiques et professionnels appropriés.",
         svg: "dashboard",
         src: dashboard,
-        alt: "A screenshot or graphic representation of the intuitive dashboard",
+        alt: "",
         second: true,
       },
       {
-        heading: "Who We Are ?",
+        heading: "Qui sommes-nous?",
         content:
-          "We are dedicated to connecting ambitious individuals with the best 		opportunities around the world. Whether you’re looking to enhance your 		skills, advance your education, or jumpstart your career, we provide the resources you need to succeed.",
+          "Nous nous engageons à mettre en relation des personnes ambitieuses avec les meilleures opportunités dans le monde entier. Que vous cherchiez à améliorer votre 		 compétences, faites progresser votre éducation ou lancez votre carrière, nous vous fournissons les ressources dont vous avez besoin pour réussir.",
         svg: "house",
         src: construction,
-        alt: "Gray metal building frame near tower crane during daytime",
+        alt: "",
       },
     ]}
   />
